--- a/NetMonitor.Application/NetMonitor.csproj
+++ b/NetMonitor.Application/NetMonitor.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Bogus" Version="34.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
