--- a/NetMonitor.Webapp/NetMonitor.Webapp.csproj
+++ b/NetMonitor.Webapp/NetMonitor.Webapp.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\NetMonitor.Application\NetMonitor.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    </ItemGroup>
+
 </Project>
