--- a/NetMonitor.Webapp/NetMonitor.Webapp.csproj
+++ b/NetMonitor.Webapp/NetMonitor.Webapp.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\Edit\EditHosts.cshtml" />
+    </ItemGroup>
+
 </Project>
