allHosts has method to create a new Host

--- a/NetMonitor.Webapp/NetMonitor.Webapp.csproj
+++ b/NetMonitor.Webapp/NetMonitor.Webapp.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Pages\Edit\EditHosts.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Hosts\index.cshtml" />
     </ItemGroup>
 
 </Project>
