--- a/NetMonitor.Webapp/NetMonitor.Webapp.csproj
+++ b/NetMonitor.Webapp/NetMonitor.Webapp.csproj
@@ -7,16 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\NetMonitor.Application\NetMonitor.csproj" />
+        <ProjectReference Include="..\NetMonitor.Application\NetMonitor.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="Pages\Edit\EditHosts.cshtml" />
-      <_ContentIncludedByDefault Remove="Pages\Hosts\index.cshtml" />
+        <_ContentIncludedByDefault Remove="Pages\Edit\EditHosts.cshtml" />
+        <_ContentIncludedByDefault Remove="Pages\Hosts\index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="wwwroot\Dto\MappingProfile.cs" />
     </ItemGroup>
 
 </Project>
