--- a/NetMonitor.Application/NetMonitor.csproj
+++ b/NetMonitor.Application/NetMonitor.csproj
@@ -11,9 +11,11 @@
     <ItemGroup>
       <PackageReference Include="Bogus" Version="34.0.2" />
       <PackageReference Include="CsvHelper" Version="30.0.1" />
+      <PackageReference Include="ExcelDataReader" Version="3.7.0-develop00310" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
+      <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
 </Project>
