--- a/NetMonitor.Webapp/NetMonitor.Webapp.csproj
+++ b/NetMonitor.Webapp/NetMonitor.Webapp.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+        <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0-preview.2.23128.3" />
     </ItemGroup>
 
     <ItemGroup>
